# sortingAlgorithmsProject

./: CMakeLists.txt  README.md
include/algorithms/: bubblesort.h  heapsort.h  mergesort.h  quicksort.h  quicksort2.h  shellsort.h  testName.h
src/: main.cpp  test_sorting_algorithms.cpp
